[package]
name = "bp3d-debug"
version = "1.0.0-rc.1.0.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Tracing subscriber implementations for use with BP3D software. Supports traditional logging through bp3d-logger and supports remote profiling through TCP."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/tracing/tracing"
readme = "../README.MD"
keywords = ["bp3d", "tracing"]
categories = ["development-tools", "development-tools::debugging", "development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp3d-logger = "2.0.0-rc.2.1.0"

[build-dependencies]
semver = "1.0.7"
